--- a/logDBParser.ipynb
+++ b/logDBParser.ipynb
@@ -386,6 +386,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def processCols(k, v):\n",
+    "#     print(\"processCols\", k, v)\n",
+    "    colsToPlot[k] = not colsToPlot[k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Displayer():\n",
     "    __name__ = \"Displayer\"\n",
     "    def __init__(self):\n",
@@ -403,6 +414,11 @@
     "                self._lastDf   = pd.read_excel(file)\n",
     "            else:\n",
     "                print(\"REUSING FILE\", file)\n",
+    "            \n",
+    "            cols = self._lastDf.columns\n",
+    "            for col in colsToPlot:\n",
+    "                if col not in cols:\n",
+    "                    colsToPlot[col] = False\n",
     "            \n",
     "            for f in self._funcs:\n",
     "                f(self._lastDf)"
@@ -443,29 +459,16 @@
    "source": [
     "class GenGraphs():\n",
     "    def __init__(self):\n",
-    "        self._data = None\n",
     "        self._funcs = []\n",
     "    def register(self, f):\n",
     "        self._funcs.append(f)\n",
     "    def __call__(self, sdf):\n",
-    "        self._data  = sdf\n",
-    "        self._vdims = [ c for c in self._data.columns if c not in kdims and c not in ignores ]\n",
+    "        self._vdims = [ c for c in sdf.columns if c not in kdims and c not in ignores ]\n",
     "        # print( vdims )\n",
-    "        self._ds    = hv.Dataset(self._data, kdims, self._vdims)\n",
+    "        ds    = hv.Dataset(sdf, kdims, self._vdims)\n",
     "#         display(self._ds)\n",
     "        for f in self._funcs:\n",
-    "            f(self._ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processCols(k, v):\n",
-    "#     print(\"processCols\", k, v)\n",
-    "    colsToPlot[k] = not colsToPlot[k]"
+    "            f(ds)"
    ]
   },
   {
@@ -485,9 +488,6 @@
     "    num = 0\n",
     "    for k,v in colsToPlot.items():\n",
     "        if not v:\n",
-    "            continue\n",
-    "        \n",
-    "        if k not in sds.columns:\n",
     "            continue\n",
     "        \n",
     "        num += 1\n",
@@ -517,9 +517,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# http://datashader.org/topics/nyc_taxi.html\n",
-    "\n",
     "def latlng_to_meters(df, lat_name, lng_name, lat_new_name, lng_new_name):\n",
+    "    # http://datashader.org/topics/nyc_taxi.html\n",
+    "\n",
     "    df[lat_new_name] = df[lat_name    ]\n",
     "    df[lng_new_name] = df[lng_name    ]\n",
     "    lat              = df[lat_new_name]\n",
@@ -706,7 +706,7 @@
     "genGraphs = GenGraphs()\n",
     "genGraphs.register(plotAxis)\n",
     "\n",
-    "# displayer.register(genGraphs)\n",
+    "displayer.register(genGraphs)\n",
     "displayer.register(plotMap )\n",
     "\n",
     "dsp = lambda file: displayer(file)"
@@ -734,6 +734,7 @@
    "outputs": [],
    "source": [
     "opts = [ (k.replace(prefix+'_trackLog-','').replace('.xlsx','').replace(DB_FOLDER+'/',''),k) for k in files ]\n",
+    "\n",
     "drp = Dropdown(\n",
     "    description=\"Select date:\",\n",
     "    options=OrderedDict([(None,'')]+opts),\n",
