filter bad column format (bool)

--- a/logDBParser.ipynb
+++ b/logDBParser.ipynb
@@ -258,6 +258,8 @@
     "Trip distance (stored in vehicle profile)(km)           float64\n",
     "Trip time(whilst moving)(s)                             float64\n",
     "Trip time(whilst stationary)(s)                         float64\n",
+    "[PRIUS]Engine Run Time (Time since Ign-On)(sec.)        float64\n",
+    "[PRIUS]Engine Run Time (Up to 255 sec. only)(sec.)      float64\n",
     "\"\"\".split(\"\\n\")\n",
     "\n",
     "colsToSkip = [c.replace(c.split()[-1],\"\").strip() for c in colsToSkip if len(c) > 0 and c[0] != '#']\n",
@@ -467,14 +469,23 @@
     "        if file is not None and file != '':\n",
     "            if file != self._lastFile:\n",
     "                print(\"READING FILE\", file)\n",
+    "                \n",
     "                del self._lastDf\n",
+    "                \n",
     "                self._lastFile = file\n",
-    "                self._lastDf   = pd.read_excel(file)\n",
-    "                print(self._lastDf.columns)\n",
-    "                self._colsToPlot = OrderedDict([(k,True) for k in self._lastDf.columns])\n",
-    "                if 'X' not in self._lastDf.columns and 'Y' not in self._lastDf.columns:\n",
+    "                df             = pd.read_excel(file)\n",
+    "#                 print(\" COLUMNS\", self._lastDf.columns)\n",
+    "                \n",
+    "                cols2plot  = [k for k,v in zip(df.dtypes.keys(), df.dtypes.values) if v not in ['bool']]\n",
+    "                if 'X' not in df.columns and 'Y' not in df.columns:\n",
     "                    print('converting to meters')\n",
-    "                    latlng_to_meters(self._lastDf, 'Latitude', 'Longitude', 'Y', 'X')\n",
+    "                    latlng_to_meters(df, 'Latitude', 'Longitude', 'Y', 'X')\n",
+    "                    \n",
+    "                cols2plot += ['Y', 'X']\n",
+    "            \n",
+    "                self._colsToPlot = OrderedDict([(k,True) for k in cols2plot])\n",
+    "                \n",
+    "                self._lastDf     = df[cols2plot]\n",
     "            else:\n",
     "                print(\"REUSING FILE\", file)\n",
     "            \n",
@@ -562,7 +573,7 @@
     "    num = 0\n",
     "    for v in vs:\n",
     "        num += 1\n",
-    "        print('adding', v)\n",
+    "#         print('adding', v)\n",
     "\n",
     "        if g is None:\n",
     "            g  = hv.Curve(sds, 'GPS Time', v)\n",
