rename files; skip broken lines

--- a/logParserCSV.ipynb
+++ b/logParserCSV.ipynb
@@ -283,7 +283,15 @@
     "                        else:\n",
     "                            data[h] = []\n",
     "            else:\n",
-    "                assert len(cols) == len(headers)\n",
+    "                #assert len(cols) == len(headers), \"number of columns for file {} line {} differs {} != {}\".format(\n",
+    "                #    f, ln, len(cols), len(headers))\n",
+    "                \n",
+    "                if len(cols) != len(headers):\n",
+    "                    print(\"number of columns for file {} line {} differs {} != {}\".format(\n",
+    "                    f, ln, len(cols), len(headers)))\n",
+    "                    \n",
+    "                    continue\n",
+    "\n",
     "                for h in data:\n",
     "                    if h in headers:\n",
     "                        hp  = headers.index(h)\n",
@@ -527,7 +535,12 @@
     "    i            = h.drop(cols_to_drop, axis=1)\n",
     "    \n",
     "    xlsx = os.path.join(DB_FOLDER, \"{}_trackLog-{}.xlsx\".format( prefix, group))\n",
-    "    print('saving to Excel {:3d}/{:3d} {} {} {} {}'.format(gn+1, len(df3.groups), xlsx, g.shape, h.shape, i.shape))\n",
+    "    \n",
+    "    shapes = \" | \".join([\"{} - rows {:5,d} columns {:5,d}\".format(n, r, c) for n, (r, c) in (  ('all' , g.shape), \n",
+    "                                                                                               ('na'  , h.shape), \n",
+    "                                                                                               ('drop', i.shape))])\n",
+    "    \n",
+    "    print('saving to Excel {:3d}/{:3d} {}\\n\\t{}'.format(gn+1, len(df3.groups), xlsx, shapes))\n",
     "    i.to_excel(xlsx)\n",
     "\n",
     "#     display( g )"
