manager library; config file

--- a/logParserCSV.ipynb
+++ b/logParserCSV.ipynb
@@ -76,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "infolder  = '2018-Auris/Logs'"
+    "import json\n",
+    "print('json', json.__version__)"
    ]
   },
   {
@@ -85,7 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_FOLDER = 'db'"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import manager"
    ]
   },
   {
@@ -94,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MIN_TIME_BETWEEN_TRIPS_IN_MINUTES = 5"
+    "cfg = json.load(open('config.json'))\n",
+    "print('config', cfg)"
    ]
   },
   {
@@ -103,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "months    = ',Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec'.split(',')"
+    "in_folder   = cfg['in_folder']"
    ]
   },
   {
@@ -112,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefix    = infolder.replace('/','_')"
+    "db_folder   = cfg['db_folder']"
    ]
   },
   {
@@ -121,7 +125,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MIN_TIME_BETWEEN_TRIPS_IN_SECONDS = MIN_TIME_BETWEEN_TRIPS_IN_MINUTES * 60"
+    "min_time_between_trips_in_minutes = cfg['min_time_between_trips_in_minutes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_time_between_trips_in_seconds = min_time_between_trips_in_minutes * 60"
    ]
   },
   {
@@ -207,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files    = [f for f in os.listdir(infolder) if f.endswith('.csv') and f.startswith('trackLog-') and not os.path.isdir(f) ]"
+    "orderedFiles = manager.get_raw_files_ordered(in_folder)"
    ]
   },
   {
@@ -216,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print( \"\\n\".join( files ) )"
+    "assert len(orderedFiles) > 0, \"NO FILES FOUND\""
    ]
   },
   {
@@ -225,29 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(files) > 0, \"NO FILES FOUND\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "orderedFiles = {}\n",
-    "\n",
-    "for f in files:\n",
-    "    g          = f.replace('trackLog-','').replace('.csv','')\n",
-    "    date, hour = g.split(\"_\")\n",
-    "    yr, mo, da = date.split('-')\n",
-    "    hr, mi, se = [int(h) for h in hour.split('-')]\n",
-    "    yr, da     = int(yr), int(da)\n",
-    "    mo         = months.index(mo)\n",
-    "    orderedFiles[(yr, mo, da, hr, mi, se)] = os.path.join(infolder, f)\n",
-    "\n",
-    "orderedFiles = OrderedDict(sorted(orderedFiles.items()))\n",
-    "\n",
-    "#print(orderedFiles)"
+    "print( \"\\n\".join( [ \"{:3d}/{:3d} {} {}\".format(fn+1, len(orderedFiles), \"{:04d}/{:02d}/{:02d} {:02d}:{:02d}:{:02d}\".format(*d), f) for fn, (d,f) in enumerate(orderedFiles.items())if f != '' ] ) )"
    ]
   },
   {
@@ -513,7 +504,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xlsx = os.path.join(DB_FOLDER, \"{}_batch_from_{}-to_{}.xlsx\".format( prefix, groups[0], groups[-1]))\n",
+    "prefix = get_in_folder_prefix(in_folder)\n",
+    "\n",
+    "xlsx = os.path.join(db_folder, \"{}_batch_from_{}-to_{}.xlsx\".format( prefix, groups[0], groups[-1]))\n",
     "\n",
     "print('saving to Excel', xlsx)\n",
     "\n",
@@ -534,7 +527,7 @@
     "    cols_to_drop = nunique[nunique == 1].index\n",
     "    i            = h.drop(cols_to_drop, axis=1)\n",
     "    \n",
-    "    xlsx = os.path.join(DB_FOLDER, \"{}_trackLog-{}.xlsx\".format( prefix, group))\n",
+    "    xlsx = os.path.join(db_folder, \"{}_trackLog-{}.xlsx\".format( prefix, group))\n",
     "    \n",
     "    shapes = \" | \".join([\"{} - rows {:5,d} columns {:5,d}\".format(n, r, c) for n, (r, c) in (  ('all' , g.shape), \n",
     "                                                                                               ('na'  , h.shape), \n",
