--- a/logParserDB.ipynb
+++ b/logParserDB.ipynb
@@ -129,7 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "infolder    = '2018-Auris/Logs'"
+    "import json\n",
+    "print('json', json.__version__)"
    ]
   },
   {
@@ -138,7 +139,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_FOLDER   = 'db'"
+    "import manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = json.load(open('config.json'))\n",
+    "print('config', cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_folder   = cfg['in_folder']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_folder   = cfg['db_folder']"
    ]
   },
   {
@@ -359,43 +388,6 @@
    "outputs": [],
    "source": [
     "# NUM_ROWS   = len(colsToPlot) // NUM_COLS + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prefix     = infolder.replace('/','_')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files      = [os.path.join(DB_FOLDER, f) for f in os.listdir(DB_FOLDER) if f.endswith('.xlsx') and f.startswith(prefix+'_trackLog-') and not os.path.isdir(f) ]\n",
-    "files.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print( \"\\n\".join( [ \"{:3d}/{:3d} {}\".format(fn+1, len(files), f) for fn, f in enumerate(files) ] ) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert len(files) > 0, \"NO FILES FOUND\""
    ]
   },
   {
@@ -840,8 +832,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filesOptions = OrderedDict([(None,'')] + \n",
-    "                           [ (k.replace(prefix+'_trackLog-','').replace('.xlsx','').replace(DB_FOLDER+'/',''),k) for k in files ])\n",
+    "db_date_file_pairs = manager.get_db_date_files(db_folder, in_folder)\n",
+    "# db_date_file_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(db_date_file_pairs) > 0, \"NO FILES FOUND\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print( \"\\n\".join( [ \"{:3d}/{:3d} {}\".format(fn+1, len(db_date_file_pairs), f) for fn, (d,f) in enumerate(db_date_file_pairs.items())if f != '' ] ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filesOptions = OrderedDict([(None,'')] + list(db_date_file_pairs.items()))\n",
     "\n",
     "filesDropdown = Dropdown(\n",
     "    description = \"Select date:\",\n",
